# fastapi-vpn-webapp

./: README.md  alembic.ini  gunicorn.service  main.py  nginx  pyproject.toml  requirements.txt  script.sh  test.db
app/: app.py  db.py  exceptions.py  kassa.py  main.py  models.py  permissions.py  schemas.py  test_main.py  users.py  utils.py  yookassa.py
app/panel/: models.py  router.py
app/payment/: kassa.py  models.py  router.py  schemas.py  utils.py
bot/: run.py  start_bot.sh
migrations/: env.py
migrations/versions/: 07d82e146de3_init.py  100e54d60d36_server_field_port_key.py  12524bf64db0_initial.py  1ae52547c2d7_init.py  1e43ee448545_init.py  2394ad5c2c7e_init.py  3104a1bdfa3d_server_fields.py  3317be10435c_init.py  3d240c6791ef_init.py  4facbbe03f11_add_is_trial_to_user.py  6072c3b13609_init.py  643a5d4c83bd_initial.py  70cabe721ff0_init.py  7bc798d0dc4d_initial.py  95340b761111_initial.py  d848cef80bec_port.py  de10fdb0bd30_init.py  f21db955267e_initial.py
tests/: conftest.py  test_main.py
